deployment/0-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: monitoring-demo
  namespace: default
  labels:
    app: monitoring-demo
spec:
  replicas: 1
  serviceName: monitoring-demo
  selector:
    matchLabels:
      app: monitoring-demo
  template:
    metadata:
      labels:
        app: monitoring-demo
    spec:
      imagePullSecrets:
      - name: nexus-registry-credentials
      containers:
      - name: monitoring-demo
        image: nexus.esolutions.ro/mstaicu/monitoring-demo
        securityContext:
          runAsNonRoot: true
          runAsUser: 65532
          runAsGroup: 65532
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: http
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: http
        startupProbe:
          httpGet:
            path: /actuator/health/readiness
            port: http
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 600Mi
          limits:
            memory: 600Mi
        volumeMounts:
        - name: heap-dumps
          mountPath: /dumps
      volumes:
      - name: heap-dumps
        emptyDir: { }
