deployment/1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: monitoring-demo
  namespace: default
  labels:
    project: monitoring
    app: monitoring-demo
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: monitoring-demo
