deployment/2-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-demo
  namespace: default
spec:
  rules:
    - host: monitoring-demo.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-demo
                port:
                  name: http
